--- a/src/Codecool.CodecoolShop/Properties/launchSettings.json
+++ b/src/Codecool.CodecoolShop/Properties/launchSettings.json
@@ -1,10 +1,10 @@
-﻿{
+{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:2425",
-      "sslPort": 44368
+      "applicationUrl": "http://localhost:5237",
+      "sslPort": 44306
     }
   },
   "profiles": {
@@ -12,16 +12,18 @@
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
+        "CodecoolShopeAPIkey": "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",
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "Codecool.CodecoolShop": {
+    "CodecoolShop": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "dotnetRunMessages": "true",
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
     }
   }
 }
