buttons in index

--- a/src/Codecool.CodecoolShop/appsettings.json
+++ b/src/Codecool.CodecoolShop/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LAPTOP-ETC7SMLE\\MSSQLSERVER2019;Database=ShopCodecool;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=DESKTOP-4F59TUD\\MSQLSERVER2019;Database=ShopCodecool;Trusted_Connection=True;TrustServerCertificate=True;"
   },
     "Logging": {
       "LogLevel": {
